tests/syntax_error/c_and.jou
def foo() -> void:
    if x && y:  # Error: use 'and' instead of '&&'
        pass
